# FakeWYYMusic

./: CMakeLists.txt  CircleBtn.qml  FileScanner.cpp  FileScanner.h  IconBoradBtn.qml  ImageNoEffBtn.qml  Main.qml  MusicRect.qml  MyScrollView.qml  MySwiperView.qml  NormalBtn.qml  OpactityBtn.qml  PopWindow.qml  README.md  RecordControl.qml  SearchInputEdite.qml  TextBtn.qml  ViewBtn.qml  VolumeControl.qml  main.cpp  resource.qrc  setting.ini
